# monoidal-stats

./: CHANGELOG.md  README.md  monoidal-stats.cabal
src/: MonoidalStats.hs
src/Data/: Kahan.hs  MonoidalStats.hs
src/MonoidalStats/: Kahan.hs
