cabal-version:      3.0
name:               monoidal-stats
version:            0.1.0.0
synopsis:           Statistics that accumulate as a monoid
description:        This package provides typeclasses for statistics that can be
                    accumulated as a monoid, and a number of instances of that
                    typeclass.  This is a generalization of Welford's method for
                    computing variance, and allows for computing statistics on
                    not just streaming data, but from subdivisions of the
                    population.
license:            BSD-3-Clause
license-file:       LICENSE
author:             Chris Smith
maintainer:         cdsmith@gmail.com
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MonoidalStats
    other-modules:    MonoidalStats.Kahan
    build-depends:    base ^>=4.16.4.0, linear
    hs-source-dirs:   src
    default-language: GHC2021

test-suite monoidal-stats-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.4.0,
        monoidal-stats
